# AndroidWars

./: .gitignore  .gitmodules  AndroidWars.pro  CMakeLists.txt  Doxyfile.in  Makefile  README  main.h  setupenvironment.sh  test.cpp  test.h  test.ui  ui_test.h
ccsprites/: license  readme
cli/: CMakeLists.txt  CmdManager.cpp  CmdManager.h  Command.h  SimMgr.cpp  SimMgr.h  cmd.def
cli/command/: Echo.h  command.h  include.cpp  include.h  loadscript.h  runphase.cpp  runphase.h  runstep.cpp  runstep.h  shutdown.cpp  shutdown.h  startup.cpp  startup.h
cli/src/: CMakeLists.txt  CmdManager.cpp  CmdManager.h  Command.h  SimMgr.h  ValueConv.h  cmd.def  main.cpp
cli/src/command/: Echo.h  command.h
dascript/: CMakeLists.txt  dacodec.cpp  dacodec.h  daparser.cpp  daparser.h  dascript.cpp  dascript.h  node.cpp  script.cpp  script.h  token.cpp  token.h  writer.cpp
dascript/detail/: danode.h  dareference.h
data/: armor.da  bot.da  game.da  testmap.da
doc/: Bot abilities  Bot behaviour  Bot programs
extsim/: BaseData.cpp  BaseData.h  CMakeLists.txt  CommonLoad.cpp  CommonLoad.h  CommonTemplate.cpp  CommonTemplate.h  DefaultExtData.h  ExtBaseData.cpp  ExtBaseData.h  ExtData.cpp  ExtData.h  ExtDataComponent.h  ExtDataListener.h  ExtErrorMgr.cpp  ExtErrorMgr.h  ExtInput.cpp  ExtInput.h  ExtModule.h  ExtPlayer.h  ExtProgramInput.cpp  ExtSim.cpp  ExtSim.h  InputBarrier.cpp  InputBarrier.h  TimelineMgr.cpp  TimelineMgr.h  TypeRule.cpp  TypeRule.h  TypeRuleLoader.cpp  TypeRuleLoader.h  TypeRuleMgr.cpp  TypeRuleMgr.h
extsim/agent/: Agent.h  AgentMgr.cpp  AgentMgr.h
extsim/datatype/: Armor.cpp  Armor.h  Bot.cpp  Bot.h  Damage.cpp  Damage.h  ExtAbility.cpp  ExtAbility.h  ExtArmor.cpp  ExtArmor.h  ExtBot.cpp  ExtBot.h  ExtDamage.cpp  ExtDamage.h  ExtGame.cpp  ExtGame.h  ExtMap.cpp  ExtMap.h  ExtProgram.cpp  ExtProgram.h  ExtWeapon.cpp  ExtWeapon.h  Game.cpp  Game.h  Map.cpp  Map.h  Program.cpp  Program.h  Weapon.cpp  Weapon.h
extsim/input/: ReplayManager.cpp  ReplayManager.h  ReplayTree.cpp  ReplayTree.h
extsim/object/: ExtDataObj.cpp  ExtDataObj.h  ParamList.cpp  ParamList.h  ParamVisitor.h  TypeRule.cpp  TypeRule.h  TypeRuleObj.h
extsim/param/: IdList.cpp  IdList.h  IdParam.cpp  IdParam.h  Position.cpp  Position.h  ValRange.h  ValueParam.cpp  ValueParam.h  dataid.def  valtype.def
extsim/replay/: ReplayManager.cpp  ReplayManager.h  ReplayTree.cpp  ReplayTree.h
extsim/simcontrol/: ExtCpuInput.cpp  ExtCpuInput.h
extsim/test/: convtest.cpp  exttest.cpp  replaytest.cpp
extsim/typerule/bot/: BaseBot.cpp  BaseBot.h  DefaultBot.cpp  DefaultBot.h  bot.def  bot.h
extsim/typerule/misc/: CpuInput.cpp  CpuInput.h
extsim/typerule/program/: ArmorAttachment.cpp  ArmorAttachment.h  Kill.cpp  Kill.h  MoveTowards.cpp  MoveTowards.h  program.def  program.h
extsim/util/: TypeConv.h
graphics/characters/: temp.xcf
graphics/menu/: startgame.xcf
graphics/mouse/: attack.kra  default.kra
graphics/profile/: test.xcf
graphics/tiles/: empty.xcf  metal.xcf  metal2.xcf  metal2orangeyellow.xcf  metal2surf.xcf
graphics/weapons/: testweapon.xcf
mapgen/: main.cpp  mapgen.pro  mapgenerator.cpp  mapgenerator.h
nepeta/: CMakeLists.txt  nepcodec.cpp  nepcodec.h  nepeta.cpp  nepeta.h  nepparser.cpp  nepparser.h  node.cpp  writer.cpp
nepeta/detail/: nepiterator.h  nepnode.h  nepreference.h
openglqt/: gamemap.h  globj.h  render.h  skeletalsystem.h
openglqt/test/SkeletalSystem/: SkeletalSystem.pro  main.cpp
pc/: CMakeLists.txt  botselector.cpp  botselector.h  customlabel.h  gamebutton.cpp  gamebutton.h  gamecontroller.cpp  gamecontroller.h  gameslider.cpp  gameslider.h  gamewidget.h  main.cpp  main.h  menubutton.cpp  menubutton.h  menudefines.h  pc.pro  res.qrc  ui.cpp  ui.h  ui.ui
pc/graphics/bg/: bg.xcf
shaders/: animation.frag  animation.vert
simulation/: Ability.cpp  Ability.h  Body.cpp  Body.h  Bot.cpp  Bot.h  BotInput.cpp  Bullet.cpp  Bullet.h  CMakeLists.txt  Common.h  CommonTemplate.cpp  CommonTemplate.h  Data.cpp  Data.h  Factory.h  Health.cpp  Health.h  Input.cpp  Input.h  Player.cpp  Player.h  Program.cpp  Program.h  Replay.cpp  Replay.h  Save.cpp  Save.h  Side.cpp  Side.h  Simulation.cpp  Simulation.h  State.cpp  State.h  StateObj.h  Sync.cpp  Sync.h  Vector.h  Weapon.cpp  Weapon.h  (+2 more)
simulation/ability/: AbilityDef.def  AbilityInclude.h  ArmorAttachment.cpp  ArmorAttachment.h  CpuBoost.cpp  CpuBoost.h
simulation/bot/: BaseBot.h  BotAbility.cpp  BotAbility.h  BotCpu.cpp  BotCpu.h  BotWeapon.cpp  BotWeapon.h
simulation/bullet/: BulletSys.h
simulation/bullet/BulletSys/: Reference.cpp
simulation/collision/: ApplyCol.h  ColMap.h  Collision.cpp  Collision.h  TileCol.cpp  TileCol.h
simulation/data/: AbilityD.cpp  AbilityD.h  ArmorD.h  BaseData.h  BotD.cpp  BotD.h  BulletD.cpp  BulletD.h  DamageD.h  ProgramD.cpp  ProgramD.h  TileD.h  WeaponD.cpp  WeaponD.h
simulation/program/: Kill.cpp  Kill.h  MoveTowards.cpp  MoveTowards.h  ProgramDef.def  ProgramInclude.h  Sensor.cpp  Sensor.h  Shoot.cpp  Shoot.h
simulation/statesys/: Reference.cpp  StateSys.cpp  StateSys.h
simulation/test/: Makefile  simtest  simtest.cpp  statetest.cpp
simulation/utility/: CallGroup.h
sound/: CMakeLists.txt  sound.cpp  sound.h
sound/test/: sndtest.cpp
testmod/data/: armor.nep  bot.da  bot.nep  damage.nep  game.da  testmap.da  testmap.nep  weapon.da  weapon.nep
testmod/graphics/profiles/: test.xcf
timeline/: CMakeLists.txt  Node.h  TimelineMgr.cpp  TimelineMgr.h
util/: camera.h  client.h  cursordefines.h
